...

  val context = LocalContext.current

  val placeholerLocation = Location(0.0, 0.0, Timestamp(0, 0), "name")

  Scaffold(
      modifier = Modifier.testTag("AddActivityScreen"),
      topBar = {
        TopAppBar(
            title = { Text("Add Activity", Modifier.testTag("travelTitle")) },
            navigationIcon = {
              IconButton(
                  onClick = { navigationActions.goBack() },
...
            verticalArrangement = Arrangement.spacedBy(16.dp)) {
              OutlinedTextField(
                  value = title,
                  onValueChange = { title = it },
                  label = { Text("Title") },
                  placeholder = { Text("Title") },
                  modifier = Modifier.testTag("titleField"))

              OutlinedTextField(
                  value = description,
                  onValueChange = { description = it },
                  label = { Text("Description") },
                  placeholder = { Text("Description") },
                  modifier = Modifier.testTag("descriptionField"))

              OutlinedTextField(
                  value = dateText,
                  onValueChange = {
                    if (it.isDigitsOnly() && it.length <= 8) {
                      dateText = it
                    }
                  },
                  label = { Text("Date") },
                  placeholder = { Text("01/01/1970") },
                  visualTransformation = DateVisualTransformation(),
                  keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
                  modifier = Modifier.testTag("dateField"))

              OutlinedTextField(
                  value = location,
                  onValueChange = {},
                  label = { Text("Location") },
                  placeholder = { Text("Location") },
                  modifier = Modifier.testTag("locationField"))

              Button(
                  enabled =
                      location.isNotBlank() &&
                          title.isNotBlank() &&
                          description.isNotBlank() &&
...
                              context,
                              "Invalid format, date must be DD/MM/YYYY.",
                              Toast.LENGTH_SHORT)
                          .show()
                    }
                  },
                  modifier = Modifier.testTag("saveButton")) {
                    Text("Save")
                  }
            }
      })
}

...
