...
          locationQuery.value = it
          locationViewModel.setQuery(it) // Update the query in the ViewModel
          setShowDropdown(true) // Show the dropdown when the text changes
        },
        label = { Text("Location") },
        placeholder = { Text("Enter an Address or Location") },
        modifier = Modifier.fillMaxWidth().testTag("inputTravelLocation"))

    // Dropdown for location suggestions
    DropdownMenu(
        expanded = showDropdown && locationSuggestions.isNotEmpty(),
        onDismissRequest = { setShowDropdown(false) }, // Hide dropdown when dismissed
        properties = PopupProperties(focusable = false),
...
