...
  val locationSuggestions by
      locationViewModel.locationSuggestions.collectAsState(initial = emptyList<Location?>())

  val dateTimeUtils = DateTimeUtils("dd/MM/yyyy HH:mm")

  Scaffold(
      modifier = Modifier.testTag("EditActivityScreen"),
      topBar = {
        TopAppBar(
            title = { Text("Edit Activity", Modifier.testTag("travelTitle")) },
            navigationIcon = {
              IconButton(
                  onClick = { navigationActions.navigateTo(Screen.SWIPER) },
...
              Button(
                  enabled = true,
                  onClick = {
                    activityViewModel.deleteActivityById(selectedActivity.value!!, context)
                    navigationActions.navigateTo(Screen.SWIPER)
                  },
                  modifier = Modifier.testTag("deleteButton")) {
                    Text("Delete")
                  }
            }
      }
}

...
